--- a/Products/.env
+++ b/Products/.env
@@ -1,6 +1,2 @@
-DB_Host=10.0.60.216
-DB_User=root
-DB_Password=Mihirneo8070*
-DB_Port=3306
-DB_Name=ecommerce_db
-ENABLE_SCHEDULER=false
+DATABASE_URL=mysql://root:MJGBhRGWCvgbsFePsbawUXeESqwzrhNe@hopper.proxy.rlwy.net:55797/railway
+ENABLE_SCHEDULER=true
